// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TreeView > should render 1`] = `
<div
  class="tc-treeview _tc-treeview_56f29b"
>
  <header
    class="_tc-treeview-header_56f29b"
  >
    <span
      id="id-title"
    >
      some elements
    </span>
    <button
      aria-describedby="00000000-0000-4000-8000-000000000000"
      aria-label="add element"
      class="btn-icon-only btn btn-link"
      id="id-add"
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-plus"
        focusable="false"
        name="talend-plus"
        pointer-events="none"
        shape-rendering="geometricPrecision"
      />
    </button>
  </header>
  <ul
    aria-labelledby="id-title"
    class="_tc-treeview-list_56f29b"
    role="tree"
  >
    <li
      aria-expanded="false"
      aria-level="1"
      aria-posinset="1"
      aria-selected="false"
      aria-setsize="1"
      class="tc-treeview-item-li _tc-treeview-li_bb3483"
      id="id-0"
      role="treeitem"
      tabindex="0"
    >
      <div
        class="tc-treeview-item _tc-treeview-item_bb3483"
        style="padding-left: 30px;"
      >
        <button
          aria-hidden="true"
          aria-label=""
          class="_tc-treeview-toggle_bb3483 btn-icon-only btn btn-link"
          id="id-0-toggle"
          role="link"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-caret-down _rotate-270_bf5f45"
            focusable="false"
            name="talend-caret-down"
            pointer-events="none"
            shape-rendering="geometricPrecision"
          />
          <span />
        </button>
        <svg
          aria-hidden="true"
          class="tc-svg-icon tc-icon _svg_bf5f45 _tc-treeview-folder_bb3483 tc-icon-name-talend-folder-closed"
          focusable="false"
          name="talend-folder-closed"
          pointer-events="none"
          shape-rendering="geometricPrecision"
        />
        <span
          class="tc-treeview-item-name _tc-treeview-item-name_bb3483"
        >
          grandpa
        </span>
        <div
          class="_tc-treeview-item-ctrl_bb3483"
        >
          <div
            class="tc-badge _tc-badge_2ccc7e tc-badge-display-large _tc-badge-display-large_2ccc7e tc-badge-readonly _tc-badge-readonly_2ccc7e"
          >
            <div
              class="tc-badge-button _tc-badge-button_2ccc7e"
            >
              <div
                class="tc-badge-label _tc-badge-label_2ccc7e"
              >
                <span
                  aria-describedby="00000000-0000-4000-8000-000000000000"
                  class="tc-badge-label-text _tc-badge-label-text_2ccc7e"
                >
                  101
                </span>
              </div>
            </div>
          </div>
          <button
            aria-describedby="00000000-0000-4000-8000-000000000000"
            aria-label="remove element"
            class="btn-icon-only btn btn-link"
            id="id-0-talend-trash"
            role="link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-trash"
              focusable="false"
              name="talend-trash"
              pointer-events="none"
              shape-rendering="geometricPrecision"
            />
          </button>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`TreeView should render 1`] = `
<div
  class="tc-treeview theme-tc-treeview"
>
  <header
    class="theme-tc-treeview-header"
  >
    <span
      id="id-title"
    >
      some elements
    </span>
    <button
      aria-describedby="42"
      aria-label="add element"
      class="btn-icon-only btn btn-link"
      id="id-add"
      role="link"
      type="button"
    >
      <span
        class="CoralIcon"
        name="talend-plus"
      />
    </button>
  </header>
  <ul
    aria-labelledby="id-title"
    class="theme-tc-treeview-list"
    role="tree"
  >
    <li
      aria-expanded="false"
      aria-level="1"
      aria-posinset="1"
      aria-selected="false"
      aria-setsize="1"
      class="tc-treeview-item-li theme-tc-treeview-li"
      id="id-0"
      role="treeitem"
      tabindex="0"
    >
      <div
        class="tc-treeview-item theme-tc-treeview-item"
        style="padding-left: 30px;"
      >
        <button
          aria-hidden="true"
          aria-label=""
          class="theme-tc-treeview-toggle btn-icon-only btn btn-link"
          id="id-0-toggle"
          role="link"
          tabindex="-1"
          type="button"
        >
          <span
            class="CoralIcon"
            name="talend-caret-down"
            transform="rotate-270"
          />
          <span />
        </button>
        <span
          class="CoralIcon theme-tc-treeview-folder"
          name="talend-folder-closed"
        />
        <span
          class="tc-treeview-item-name theme-tc-treeview-item-name"
        >
          grandpa
        </span>
        <div
          class="theme-tc-treeview-item-ctrl"
        >
          <div
            class="tc-badge theme-tc-badge tc-badge-display-large theme-tc-badge-display-large tc-badge-readonly theme-tc-badge-readonly"
          >
            <div
              class="tc-badge-button theme-tc-badge-button"
            >
              <div
                class="tc-badge-label theme-tc-badge-label"
              >
                <span
                  aria-describedby="42"
                  class="tc-badge-label-text theme-tc-badge-label-text"
                >
                  101
                </span>
              </div>
            </div>
          </div>
          <button
            aria-describedby="42"
            aria-label="remove element"
            class="btn-icon-only btn btn-link"
            id="id-0-talend-trash"
            role="link"
            type="button"
          >
            <span
              class="CoralIcon"
              name="talend-trash"
            />
          </button>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
